# agent-framework

./: .gitattributes  .gitignore  COMMUNITY.md  CONTRIBUTING.md  README.md  SUPPORT.md  TRANSPARENCY_FAQ.md  TRANSPARENCY_FAQs.md  wf-source-gen-plan.md
python/: .cspell.json  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODING_STANDARD.md  DEV_SETUP.md  PACKAGE_STATUS.md  README.md  check_md_code_blocks.py  devsetup.sh  pyproject.toml  pyrefly.samples.toml  pyrefly.toml  pyrightconfig.samples.json  pyrightconfig.samples.py310.json  pyrightconfig.tests.json  pytest.xml  python-coverage.xml  run_tasks_in_changed_packages.py  run_tasks_in_extensions_if_exists.py  shared_tasks.toml  ty.samples.toml
python/.github/instructions/: python.instructions.md
python/.github/skills/agent-framework-py-release/: SKILL.md
python/.github/skills/pull-requests/: SKILL.md
python/.github/skills/python-code-quality/: SKILL.md
python/.github/skills/python-development/: SKILL.md
python/.github/skills/python-feature-lifecycle/: SKILL.md
python/.github/skills/python-package-management/: SKILL.md
python/.github/skills/python-samples/: SKILL.md
python/.github/skills/python-testing/: SKILL.md
python/.user/: function.json
python/agent_framework/: __init__.py  __init__.pyi  _agents.py  _clients.py  _logging.py  _pydantic.py  _tools.py  _types.py  exceptions.py  guard_rails.py
python/agent_framework_meta/: __init__.py
python/docs/: README.md  generate_docs.py
python/docs/agent-framework/: conf.py  index.md
python/docs/agent-framework/_extension/: code_lint.py  gallery_directive.py
python/docs/agent-framework/reference/: index.md
python/extensions/agent-framework-azure/: pyproject.toml
python/extensions/agent-framework-openai/: pyproject.toml
python/extensions/azure/: pyproject.toml
python/extensions/openai/: pyproject.toml
python/samples/: AGENTS.md  README.md  SAMPLE_GUIDELINES.md  _run_all_samples.py
python/samples/01-get-started/: 01_hello_agent.py  02_add_tools.py  03_multi_turn.py  04_memory.py  05_first_workflow.py  05_functional_workflow_with_agents.py  06_functional_workflow_basics.py  06_host_your_agent.py  07_first_graph_workflow.py  08_host_your_agent.py  README.md
python/samples/02-agents/: auto_retry.py  background_responses.py  feature_stage_introspection.py  response_stream.py  typed_options.py
python/samples/02-agents/a2a/: README.md  a2a_agent_as_function_tools.py  a2a_polling.py  a2a_protocol_selection.py  a2a_stream_reconnection.py  agent_with_a2a.py
python/samples/02-agents/chat_client/: README.md  azure_ai_chat_client.py  azure_assistants_client.py  azure_chat_client.py  azure_responses_client.py  built_in_chat_clients.py  chat_response_cancellation.py  custom_chat_client.py  openai_assistants_client.py  openai_chat_client.py  openai_responses_client.py  require_per_service_call_history_persistence.py
python/samples/02-agents/compaction/: README.md  advanced.py  agent_client_overrides.py  basics.py  compaction_provider.py  custom.py  summarization.py  tiktoken_tokenizer.py
python/samples/02-agents/context_providers/: README.md  agent_mode_provider.py  azure_ai_foundry_memory.py  cross_session_observer.py  foundry_toolbox_context_provider.py  simple_context_provider.py  todo_provider.py
python/samples/02-agents/conversations/: README.md  cosmos_history_provider.py  cosmos_history_provider_conversation_persistence.py  cosmos_history_provider_messages.py  cosmos_history_provider_sessions.py  custom_chat_message_store_thread.py  custom_history_provider.py  file_history_provider.py  file_history_provider_conversation_persistence.py  redis_chat_message_store_session.py  redis_history_provider.py  suspend_resume_session.py  suspend_resume_thread.py
python/samples/02-agents/declarative/: README.md  azure_openai_responses_agent.py  get_weather_agent.py  inline_yaml.py  mcp_tool_yaml.py  microsoft_learn_agent.py  openai_agent.py  openai_responses_agent.py
python/samples/02-agents/devui/: .env.example  README.md  in_memory_mode.py  main.py
python/samples/02-agents/embeddings/: azure_ai_inference_embeddings.py  azure_openai_embeddings.py  foundry_embeddings.py  openai_embeddings.py  openai_embeddings_on_azure.py
python/samples/02-agents/evaluation/: evaluate_agent.py  evaluate_multimodal.py  evaluate_with_expected.py
python/samples/02-agents/harness/: README.md  (+2 more)
python/samples/03-workflows/: README.md
python/samples/04-hosting/: README.md
python/samples/_sample_validation/: README.md  __init__.py  __main__.py  const.py  create_dynamic_workflow_executor.py  discovery.py  models.py  report.py  run_dynamic_validation_workflow_executor.py  workflow.py
python/samples/amazon/: bedrock_sample.py
python/samples/autogen-migration/: .gitignore  README.md  pyrightconfig.json
python/samples/concepts/: README.md  background_responses.py  response_stream.py  typed_options.py
python/samples/getting_started/: minimal_sample.py
python/samples/semantic-kernel-migration/: README.md
python/scripts/: __init__.py  check_md_code_blocks.py  local_mcp_streamable_http_server.py  run_tasks_in_changed_packages.py  run_tasks_in_packages_if_exists.py  task_runner.py  workspace_poe_tasks.py
python/scripts/dependencies/: README.md  _dependency_bounds_lower_impl.py  _dependency_bounds_release_impl.py  _dependency_bounds_runtime.py  _dependency_bounds_upper_impl.py  add_dependency_to_project.py  upgrade_dev_dependencies.py  validate_dependency_bounds.py
python/scripts/flaky_report/: __init__.py  __main__.py  aggregate.py
python/scripts/integration_test_report/: __init__.py  __main__.py  aggregate.py
python/scripts/sample_validation/: README.md  __init__.py  __main__.py  aggregate.py  create_dynamic_workflow_executor.py  discovery.py  models.py  report.py  run_dynamic_validation_workflow_executor.py  workflow.py
python/src/agent_framework/: __init__.py
python/tests/: __init__.py  sample_utils.py
python/tests/samples/: __init__.py
python/tests/unit/: test_agents.py  test_clients.py  test_tool.py  test_types.py
(+7073 files in other folders)
