[project]
name = "openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eavanvalkenburg", email = "github@vanvalkenburg.eu" }
]
requires-python = ">=3.10"
dependencies = [
    "agent-framework",
]

[tool.ruff]
extend = "../../pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
agent-framework = { workspace = true }
