[project]
name = "agent-framework-hosting-sample-local-multi-channel"
version = "0.0.1"
description = "Multi-channel hosting sample (Responses + Telegram) with a shared agent, FileHistoryProvider, and cross-channel session resumption."
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-hosting",
    "agent-framework-hosting-responses",
    "agent-framework-hosting-telegram",
    "azure-identity",
    "aiohttp>=3.13.5",
    "hypercorn>=0.17",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["openai>=1.99"]

[tool.uv]
package = false

[tool.uv.sources]
agent-framework-hosting = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting" }
agent-framework-hosting-responses = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting-responses" }
agent-framework-hosting-telegram = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting-telegram" }
