[project]
name = "agent-framework-hosting-sample-local-responses"
version = "0.0.1"
description = "Minimal Responses-only local hosting sample with native FastAPI routes."
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-hosting",
    "agent-framework-hosting-responses",
    "azure-identity",
    "aiohttp>=3.13.5",
    "fastapi>=0.115.0,<0.138.1",
    "hypercorn>=0.17",
]

[dependency-groups]
dev = [
    "agent-framework-openai",
    "openai>=1.99",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-framework-hosting = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting" }
agent-framework-hosting-responses = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting-responses" }
agent-framework-openai = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/openai" }
